objects/Debug__c.object
<CustomObject>
    <description>This object lists all exception errors for Apex Error Exceptions.</description>
    <label>Debug</label>
    <nameField>
        <displayFormat>DB-{00000}</displayFormat>
        <label>Debug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Message__c</fullName>
        <description>The error message in case there was an exception.</description>
        <label>Message</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Debugs</relationshipLabel>
        <relationshipName>Debugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <label>ErrorCode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarketoIDs__c</fullName>
        <label>MarketoIDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketo_IDs__c</fullName>
        <label>Marketo IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignmemberIds__c</fullName>
        <label>CampaignmemberIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MarketoErrorNumber__c</fullName>
        <description>Marketo error Number for the thrown Apex Callout.</description>
        <label>MarketoErrorNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>